--- a/bib/book.bib
+++ b/bib/book.bib
@@ -1,12 +1,23 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Alexander Coppock at 2019-01-23 15:08:58 -0800 
+%% Created for Alexander Coppock at 2019-03-06 11:55:34 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{chassang2012selective,
+	Author = {Chassang, Sylvain and Miquel, Padr{\'o} I and Snowberg, Erik and others},
+	Date-Added = {2019-03-06 11:55:29 -0800},
+	Date-Modified = {2019-03-06 11:55:29 -0800},
+	Journal = {American Economic Review},
+	Number = {4},
+	Pages = {1279--1309},
+	Title = {Selective trials: A principal-agent approach to randomized controlled experiments},
+	Volume = {102},
+	Year = {2012}}
 
 @phdthesis{miller1984new,
 	Author = {Miller, Judith Droitcour},
