--- a/02_Part_B_Design_Library/02_Experimental_Descriptive/02_Sensitive_Questions.Rmd
+++ b/02_Part_B_Design_Library/02_Experimental_Descriptive/02_Sensitive_Questions.Rmd
@@ -221,10 +221,4 @@ rr_design <- set_diagnosands(rr_design, diagnosands = declare_diagnosands(select
 <!-- ``` -->
 
 
-# References
-
-
-
-
-
-## 	List experiments
+### References
