--- a/02_Part_B_Design_Library/01_Observational_Descriptive/01_Simple_Random_Sampling.Rmd
+++ b/02_Part_B_Design_Library/01_Observational_Descriptive/01_Simple_Random_Sampling.Rmd
@@ -69,3 +69,5 @@ Things work well here it seems. In the exercises we suggest some small modificat
 ### Design Inspector
 
 <iframe src="https://graemeblair.shinyapps.io/inspect_design/?design=srs" style="border: none; width: 100%; height: 550px"></iframe>
+
+### References
