--- a/02_Part_B_Design_Library/001_Part_B_Design_Library_Introduction.Rmd
+++ b/02_Part_B_Design_Library/001_Part_B_Design_Library_Introduction.Rmd
@@ -1,4 +1,4 @@
-# (PART) Design Library  {-} 
+# Design Library
 
 This section of the book ennumerates a series of common and not-so-common social science research design. Each entry will include description of the design in terms of MIDA and also a declaration of the design in code. We'll often diagnose designs over the range of values of some design parameters in order to point out especially interesting or unusual features of the design.
 
