--- a/03_Part_C_Principles/01_Model_Principles/05_Use_null_model_to_correct_for_multiple_comparisons.Rmd
+++ b/03_Part_C_Principles/01_Model_Principles/05_Use_null_model_to_correct_for_multiple_comparisons.Rmd
@@ -32,28 +32,43 @@ b_sims <- 20
 
 ### The problem of confidence in multiple tests
 
-Using $p$-values to make inferences about effects is essentially an exercise in risk management: when we stipulate a "confidence level" below which we consider a $p$-value statistically significant -- often referred to as $\alpha$ (alpha) -- we are saying how comfortable we are inferring that there's an effect when there actually isn't one. Thus, a researcher who tells you that her confidence level is .05 is telling you that, in a world where there's no effect, she's willing to accept a 5% chance of wrongly inferring that there is. The problem is that, often, the level of risk we say we're willing to take on in principle doesn't actually correspond to the level of risk we take on in practice. We're often at a higher risk of false inference than we realize.
+Using $p$-values to make inferences about effects is essentially an exercise in risk management: when we stipulate a "confidence level" below which we consider a $p$-value statistically significant -- often referred to as $\alpha$ (alpha) -- we are saying how comfortable we are inferring that there's an effect when there actually isn't one. A researcher who tells you that her confidence level is .05 is telling you that, in a world where there's no effect, she's willing to accept a 5% chance of wrongly inferring that there is one. The problem is that, often, the level of risk we say we're willing to take on in principle doesn't actually correspond to the level of risk we take on in practice. We're often at a higher risk of false inference than we realize.
 
 To see this point, let's a design based on a null model with two variables that are possibly correlated by `rho`.
 
 ```{r}
 rho <- 0
-design <- declare_population(N = 100, 
+design <- declare_population(N = 200, 
                              Y1 = rnorm(N), 
                              Y2 = rnorm(n = N,mean = Y1 * rho, 
-                                        sd = sqrt(1^2 - rho^2))) +
+                                        sd = sqrt(1^ 2 - rho ^ 2))) +
   declare_assignment(prob = .5) +
   declare_estimator(Y1 ~ Z, label = "Y1") +
   declare_estimator(Y2 ~ Z, label = "Y2") 
 ```
 
-We specify that we're willing to falsely infer that there's an effect 5% of the time, and simulate the design hundreds of times. Every time we see that the $p$-value from one of our tests falls below $\alpha$, we infer (falsely) that there's an effect.  
+We specify that we're willing to falsely infer that there's an effect 5% of the time. 
 
 ```{r}
 test_alpha <- .05
+```
+
+Then, we simulate the design hundreds of times. Every time we see that the $p$-value from one of our tests falls below $\alpha$, we infer (falsely) that there's an effect.  
+
+```{r, eval = do_diagnosis & !exists("do_bookdown")}
 simulations <- simulate_design(design) %>% 
   mutate(test_rejection = p.value <= test_alpha) 
 ```
+
+```{r, echo = FALSE, purl = FALSE}
+# figure out where the dropbox path is, create the directory if it doesn't exist, and name the RDS file
+rds_file_path <- paste0(get_dropbox_path("section_template"), "/simulations_pilot.RDS")
+if (do_diagnosis & !exists("do_bookdown")) {
+  write_rds(simulations_pilot, path = rds_file_path)
+}
+simulations_pilot <- read_rds(rds_file_path)
+```
+
 
 And guess what, we do that about 5% of the time!
 
